fix(RowDetail): Row Detail extension should work with editable grid - this issue was brought up in a SO question that is now deleted, the main problem was that Row Detail was never tested with editable grids and was throwing an error - while testing with editable grid, we should also collapse all row detail when clicking on an editable cell to avoid UI issues with active cell which was showing up over the row detail panel and causing UI weirdness - also found that the SlickRowDetail wasn't always merging its internal options with a default set of options, it was only using the options defined by the user and omitting any default values which caused problem and that was caught with `useRowClick: false` that ended up not working as expected

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -257,6 +257,7 @@ $slick-detail-view-icon-expand-color-hover:                 darken($slick-detail
 $slick-detail-view-icon-size:                               calc(#{$slick-icon-font-size} + 2px) !default;
 $slick-detail-view-container-bgcolor:                       #f7f7f7 !default;
 $slick-detail-view-container-border:                        1px solid #c0c0c0 !default;
+$slick-detail-view-container-left:                          0 !default;
 $slick-detail-view-container-padding:                       10px !default;
 $slick-detail-view-container-z-index:                       1000 !default;
 
